# Stego

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_commands.json  configure.sh  secrets
include/: image.hpp  lsb_embedder.hpp  stego.hpp  test_image.hpp
include/crypto/: crypto.hpp
include/embedder/: embedder.hpp
include/image/: image.hpp
include/lsb_embedder/: lsb_embedder.hpp
include/stego/: stego.hpp
src/: CMakeLists.txt  image.cpp  lsb_embedder.cpp  main.cpp  stego.cpp
src/crypto/: CMakeLists.txt  crypto.cpp
src/image/: CMakeLists.txt  image.cpp
src/lsb_embedder/: CMakeLists.txt  lsb_embedder.cpp
src/stego/: CMakeLists.txt  stego.cpp
src/stegtool/: CMakeLists.txt
